--- a/HTML day 1 extra/contact.html
+++ b/HTML day 1 extra/contact.html
@@ -9,13 +9,14 @@
 </head>
 <body>
     <!-- navbar -->
-    <div class="topnav">
+    <!-- navbar -->
+    <nav class="topnav">
         <ul class="center">
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="about.html">About</a></li>
         </ul>
-    </div>
+    </nav>
 
     <!-- contact -->
     <div class="container">
