--- a/HTML day 1 extra/index.html
+++ b/HTML day 1 extra/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <!-- navbar -->
-    <div class="topnav">
+    <nav class="topnav">
         <ul class="center">
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="about.html">About</a></li>
         </ul>
-    </div>
-    
+    </nav>
+        
     <!-- home -->
     <div class="container">
         <h1>Welcome</h1>
