--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     </nav>
 
     <!-- about -->
-    <div class="container-about">
+    <div class="container">
         <h1>About</h1>
         <p>
             My name is Dewi Safira Ramadhani and you can call me Safira. I'm from Yogyakarta.
