--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
     <!-- home -->
     <div class="container">
         <h1>Welcome</h1>
-        <p>Hello, my name is Safira. You can find my contact and my about at navbar above.</p>
+        <p>
+            Hello, my name is Safira. You can find my contact which I use frequently
+            and my about at navbar above.
+        </p>
     </div>
 </body>
 </html>
