--- a/task.html
+++ b/task.html
@@ -9,7 +9,7 @@
 <body>
     <!-- identity -->
     <section>
-        <h1>About Me</h1>
+        <h1>Profile</h1>
         <img src="asset\img\photo.jpg" alt="pila" style="width: 250px; height: 250px">
         <p> <span style="font-weight:bold">Full Name :</span> Dewi Safira Ramadhani</p>
         <p> <span style="font-weight:bold">Nick Name :</span> Safira</p>
@@ -19,13 +19,13 @@
         <hr>
     </section>
     
-    <!-- desc -->
+    <!-- About -->
     <section>
-        <h1>Description</h1>
+        <h1>About me</h1>
         <p>
             &nbsp; &nbsp; I'm a freshgraduate from Infomatic major at AMIKOM Yogyakarta University. 
             I've carrer interest in software development. My hobby are reading, listening music, 
-            &amp; watching movie. For the detail about my hobby, read below.
+            &amp; watching movie. For the detail about my hobby, you can read below.
         </p>
         
         <!-- hobby -->
