--- a/task.html
+++ b/task.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="asset/css/style.css">
     <title>Task HTML</title>
 </head>
 <body>
@@ -30,32 +31,56 @@
         
         <!-- hobby -->
         <h1>Hobby</h1>
-        <p><b>Reading</b></p>
-        <p>I love reading book especially Lexie Xu's novel. This is my favorites</p>
-        <p><i>
-            &rarr; Pengurus MOS Harus Mati, Omen, Kutukan Hantu Opera, Sang Penghianat,
-            Rahasia Tergelap, &amp; Rahasia Ayu
-        </i></p>
-        <br>
-        
-        <p><b>Listening Music</b></p>
-        <p>
-            I like to listening music mostly while studying or work and while 
-            I'm get bored and sing it. This is genre that I always listening to
-        </p>
-        <p>
-            &rarr; K-pop, anime song, english song, &amp; movie soundtrack
-        </p>
-        <br>
+        <table>
+            <tr>
+                <th>Hobby</th>
+                <th>Detail</th>
+                <th>Favorites</th>
+            </tr>
 
-        <p><b>Watching Movie</b></p>
-        <p>
-            I like to watching movie or any video content while I've freetime. 
-            This is genre I always watch to
-        </p>
-        <p>
-            &rarr; Korea Drama, Anime, Disney, Action, &amp; Fiction
-        </p>
+            <tr>
+                <td><b>Reading</b></td>
+                <td>I love reading book especially Lexie Xu's novel.</td>
+                <td><i>
+                    <ul>
+                        <li>Pengurus MOS Harus Mati</li>
+                        <li>Omen</li>
+                        <li>Kutukan Hantu Opera</li>
+                        <li>Sang Penghianat</li>
+                        <li>Rahasia Tergelap</li>
+                        <li>Rahasia Ayu</li>
+                    </ul>
+                </i></td>
+            </tr>
+
+            <tr>
+                <td><b>Listening Music</b></td>
+                <td>I like to listening music mostly while studying or work and while 
+                    I'm get bored and sing it.</td>
+                <td>
+                    <ul>
+                        <li>K-pop</li>
+                        <li>Anime song</li>
+                        <li>English song</li>
+                        <li>Movie soundtrack</li>
+                    </ul>
+                </td>
+            </tr>
+
+            <tr>
+                <td><b>Watching Movie</b></td>
+                <td> I like to watching movie or any video content while I've freetime.</td>
+                <td>
+                    <ul>
+                        <li>Korea Drama</li>
+                        <li>Anime</li>
+                        <li>Disney</li>
+                        <li>Action</li>
+                        <li>Fiction</li>
+                    </ul>
+                </td>
+            </tr>
+        </table>
         <hr>
     </section>
 
