--- a/task.html
+++ b/task.html
@@ -30,8 +30,8 @@
         </p>
         
         <!-- hobby -->
-        <h1>Hobby</h1>
         <table>
+            <caption><h1>Hobby</h1></caption>
             <tr>
                 <th>Hobby</th>
                 <th>Detail</th>
