--- a/shoppingList.html
+++ b/shoppingList.html
@@ -14,6 +14,7 @@
             <caption><h1>Dessert Shopping List</h1></caption>
             <tr>
                 <th>Item</th>
+                <th>Picture</th>
                 <th>Variety</th>
                 <th>Amount</th>
                 <th>Price</th>
@@ -23,8 +24,10 @@
             <tr>
                 <td class="item">
                     <p><b>Ice Cream</b></p>
+                </td>
+                <td class="item">
                     <img src="https://i.pinimg.com/564x/59/4b/da/594bda60651fad5e51cc8d23a574f106.jpg" 
-                    alt="Ice Cream" style="width: 200px; height: 300px;">
+                    alt="Ice Cream" style="width: 70px; height: 90px;">
                 </td>
                 <td><ul>
                     <li>Vanilla</li>
@@ -39,8 +42,10 @@
             <tr>
                 <td class="item">
                     <p><b>Macaroon</b></p>
+                </td>
+                <td class="item">
                     <img src="https://i.pinimg.com/564x/7d/97/22/7d97222d3b01e67040d9d3d04cbeaeb3.jpg" 
-                    alt="Macaroon" style="width: 200px; height: 300px;">
+                    alt="Macaroon" style="width: 70px; height: 90px;">
                 </td>
                 <td><ul>
                     <li>Vanilla</li>
@@ -58,8 +63,10 @@
             <tr>
                 <td class="item">
                     <p><b>Slice Cake</b></p>
+                </td>
+                <td class="item">
                     <img src="https://i.pinimg.com/564x/01/fc/37/01fc37fc9816705c4d108bd075afcf07.jpg" 
-                    alt="Slice Cake" style="width: 200px; height: 300px;">
+                    alt="Slice Cake" style="width: 70px; height: 90px;">
                 </td>
                 <td><ul>
                     <li>Strawberry Shortcake</li>
@@ -74,16 +81,42 @@
             <tr>
                 <td class="item">
                     <p><b>Meringue Cookies</b></p>
+                </td>
+                <td class="item">
                     <img src="https://i.pinimg.com/564x/15/27/39/15273999bb0644c57e48cc421d1f382d.jpg" 
-                    alt="Meringue Co" style="width: 250px; height: 250px;">
+                    alt="Meringue Cookies" style="width: 80px; height: 80px;">
                 </td>
                 <td><ul>
-                    <li>Strawberry </li>
+                    <li>Raspberry </li>
                     <li>Chocolate</li>
                 </ul></td>
                 <td class="item">2</td>
                 <td class="price">Rp30.000</td>
                 <td class="price"><b>Rp60.000</b></td>
+            </tr>
+
+            <tr>
+                <td class="item">
+                    <p><b>Roll cake</b></p>
+                </td>
+                <td class="item">
+                    <img src="https://i.pinimg.com/564x/89/df/16/89df164179111536b3e05d73da481a39.jpg" 
+                    alt="Roll Cake" style="width: 70px; height: 90px;">
+                </td>
+                <td><ul>
+                    <li>Oreo</li>
+                    <li>Red velvet</li>
+                </ul></td>
+                <td class="item">2</td>
+                <td class="price">Rp20.000</td>
+                <td class="price"><b>Rp40.000</b></td>
+            </tr>
+
+            <tr style="font-size: 16pt;">
+                <td colspan="5">
+                    <b>Total</b>
+                </td>
+                <td class="price"><b>Rp365.000</b></td>
             </tr>
         </table>
     </section>
