--- a/shoppingList.html
+++ b/shoppingList.html
@@ -33,9 +33,15 @@
                     alt="Ice Cream" style="width: 70px; height: 90px;">
                 </td>
                 <td><ul>
-                    <li>Vanilla</li>
-                    <li>Chocolate</li>
-                    <li>Strawberry</li>
+                    <li>Vanilla<ul>
+                        <li>2</li>
+                    </ul></li>
+                    <li>Chocolate<ul>
+                        <li>2</li>
+                    </ul></li>
+                    <li>Strawberry<ul>
+                        <li>2</li>
+                    </ul></li>
                 </ul></td>
                 <td class="item">6</td>
                 <td class="price">Rp5.000</td>
