--- a/media.html
+++ b/media.html
@@ -58,6 +58,9 @@
             <img src="https://i.pinimg.com/564x/0d/c9/6f/0dc96f1a433d9b69f1f5be330a894038.jpg" alt="Wallpaper" width="400px" height="200px">
         </div>
         <hr>
+
+        <h2>File with <code>object</code> tag</h2>
+        <object data="shoppingList.html" width="100%" height="200px"></object>
     </section>
 
     <!-- Form -->
