--- a/html/about.html
+++ b/html/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="D:\safira_zettacamp_catfish\asset\css\style.css">
-    <title>Document</title>
+    <title>Task HTML Day 6</title>
 </head>
 <body>
     <header>
@@ -20,18 +20,73 @@
 
     <main>
         <!-- about -->
-        <section>
-            <h1>About Us</h1>
-        </section>
+        <section style="background-color: white;">
+            <div class="row">
+                <article>
+                    <h1 class="text-center">About Us</h1>
+                    <hr>
+                    <p class="content">
+                        &nbsp; &nbsp; Chocorange Music is a music player application web based with offering you a personal music list
+                        and you can buy your favorites artist music album. We also offering you many account
+                        categories with many each benefit. <br>
+                    </p>
+                </article>
 
-        <!-- Service -->
-        <section>
-            <h1>Our Service</h1>
+                <article>
+                    <h1 class="text-center">Our Service</h1>
+                    <hr>
+                    <ol>
+                        <li>
+                            <b style="color: #003566;">Help Site</b>
+                            <p>If you have a problem while using our application, you can search the solution in our help site which contain many common question from other users</p>
+                        </li>
+                        <li>
+                            <b style="color: #003566;">Contact Us</b>
+                            <p>You can contact us if you have a problem while using the application and not found any solution in our help site</p>
+                        </li>
+                    </ol>
+                </article>
+            </div>
         </section>
 
         <!-- contact -->
-        <section>
-            <h1>Contact Us</h1>
+        <section style="background-color: #f2f2f2;">
+            <h1 class="text-center">Contact Us</h1>
+            <hr>
+            <p class="text-center">You can contact or find us below</p>
+            <div class="row">
+                <article class="col">
+                    <h2>Address</h2>
+                    <p>Yogyakarta, Indonesia</p>
+                </article>
+
+                <article class="col">
+                    <h2>Phone</h2>
+                    <p>12345678987</p>
+                </article>
+
+                <article class="col">
+                    <h2>Email</h2>
+                    <p>chocorange@gmail.com</p>
+                </article>
+            </div>
+            
+            <div class="row">
+                <article class="col">
+                    <h2>Website</h2>
+                    <p>www.chocorange.com</p>
+                </article>
+                
+                <article class="col">
+                    <h2>Instagram</h2>
+                    <p>@chocorange</p>
+                </article>
+
+                <article class="col">
+                    <h2>Facebook</h2>
+                    <p>Chocorange Music</p>
+                </article>
+            </div>
         </section>
     </main>
 
