--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <!-- Welcome -->
         <section class="text-center" style="background-color: white;">
             <h1>Welcome To Chocorange Music</h1>
+            <hr>
             <p>
                 Enjoy listening music free and buy music album of your favorites artist with many 
                 benefit each account category
@@ -30,8 +31,9 @@
 
         <section style="background-color: #f2f2f2;">
             <h1 class="text-center">About Us</h1>
+            <hr>
             <p class="content">
-                Chocorange Music is a music player platform with offering you a personal music list
+                Chocorange Music is a music player application web based with offering you a personal music list
                 and you can buy your favorites artist music album. We also offering you many account
                 categories with many each benefit. <a href="#account"> Click here to learn more</a>
             </p>
