--- a/html/profile.html
+++ b/html/profile.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="D:\safira_zettacamp_catfish\asset\css\style.css">
     <title>Document</title>
 </head>
 <body>
@@ -21,46 +22,55 @@
     <main>
         <!-- photo -->
         <section>
-            <img src="" alt="Photo Profile">
-            <h1>Hai, Safira Ramadhani</h1>
+            <div class="row">
+                <div class="col form-con">
+                    <div class="text-center">
+                        <img src="D:\safira_zettacamp_catfish\asset\img\Doddle.jpg" alt="Photo Profile" class="pp">
+                        <h1>Hai, Safira Ramadhani</h1>
+                    </div>
+                    <p>Name</p>
+                    <input type="text" disabled placeholder="Safira Ramadhani"><br>
+                    <p>Email</p>
+                    <input type="email" disabled placeholder="safiramadhani9@gmail.com"><br>
+                    <p>Account Catergory</p>
+                    <input type="text" disabled placeholder="Personal"><br>
+                    <button>Edit</button>
+                    <button><a href="register.html">Logout</a></button>
+                </div>
+                <div class="col">
+                    <h1>Payment Information</h1>
+                    <table>
+                        <tr>
+                            <th>Date</th>
+                            <th>Item</th>
+                            <th>Price</th>
+                            <th>Payment Method</th>
+                        </tr>
+
+                        <tr>
+                            <td>22 September 2022</td>
+                            <td>Personal Account Payment</td>
+                            <td>Rp 50.000</td>
+                            <td>OVO</td>
+                        </tr>
+
+                        <tr>
+                            <td>30 September 2022</td>
+                            <td>Album music</td>
+                            <td>Rp 200.000</td>
+                            <td>OVO</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
         </section>
 
         <!-- profile -->
-        <section>
-            <p>Name</p>
-            <input type="text" disabled placeholder="Safira Ramadhani"><br>
-            <p>Email</p>
-            <input type="email" disabled placeholder="safiramadhani9@gmail.com"><br>
-            <p>Account Catergory</p>
-            <input type="text" disabled placeholder="Personal"><br>
-            <p>Payment Information</p>
-            <table>
-                <tr>
-                    <th>Date</th>
-                    <th>Item</th>
-                    <th>Price</th>
-                    <th>Payment Method</th>
-                </tr>
-
-                <tr>
-                    <td>22 September 2022</td>
-                    <td>Personal Account Payment</td>
-                    <td>Rp 50.000</td>
-                    <td>OVO</td>
-                </tr>
-
-                <tr>
-                    <td>30 September 2022</td>
-                    <td>Album music</td>
-                    <td>Rp 200.000</td>
-                    <td>OVO</td>
-                </tr>
-            </table>
+            
         </section>
 
         <section>
-            <button>Edit</button>
-            <button>Logout</button>
+            
         </section>
     </main>
 
