--- a/html/register.html
+++ b/html/register.html
@@ -18,7 +18,7 @@
     </header>
 
     <main>
-        <section class="reg-sec">
+        <section class="sec">
             <article class="form-con">
                 <h1>Register</h1>
                 <form action="">
