--- a/html/about.html
+++ b/html/about.html
@@ -21,20 +21,23 @@
     <main>
         <!-- about -->
         <section style="background-color: white;">
-            <div class="row">
-                <article>
+            <article class="row">
+                <div class="col">
                     <h1 class="text-center">About Us</h1>
-                    <hr>
                     <p class="content">
                         &nbsp; &nbsp; Chocorange Music is a music player application web based with offering you a personal music list
                         and you can buy your favorites artist music album. We also offering you many account
                         categories with many each benefit. <br>
                     </p>
-                </article>
-
-                <article>
+                </div>
+                <hr>
+                <img src="D:\safira_zettacamp_catfish\asset\img\Web_150DPI-20190927_10th_Floor_Conference_Room_2_v1-1120x630.jpg" width="400px" alt="">
+            </article>
+            
+            <article class="row">
+                <img src="D:\safira_zettacamp_catfish\asset\img\rsz_20474.jpg" width="400px" alt="">
+                <div class="col">
                     <h1 class="text-center">Our Service</h1>
-                    <hr>
                     <ol>
                         <li>
                             <b style="color: #003566;">Help Site</b>
@@ -45,8 +48,9 @@
                             <p>You can contact us if you have a problem while using the application and not found any solution in our help site</p>
                         </li>
                     </ol>
+                </div>
                 </article>
-            </div>
+    
         </section>
 
         <!-- contact -->
