--- a/html/album_preview.html
+++ b/html/album_preview.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="D:\safira_zettacamp_catfish\asset\css\style.css">
+    <title>Task HTML Day 6</title>
 </head>
 <body>
     <header>
@@ -20,30 +21,50 @@
 
     <main>
         <section>
-            <h1>Equal (=) Album's Preview</h1>
-            <section>
-                <img src="" alt="Album">
-                <h2>Description</h2>
-                <p>...</p>
-            </section>
-            <section>
-                <p>Artist</p>
-                <p>Year</p>
-                <p>City</p>
-            </section>
 
-            <section>
+            <h1 class="text-center">Equal (=)</h1>
+            <section class="song">
+                <div class="row">
+                    <div class="col">
+                        <img src="https://upload.wikimedia.org/wikipedia/en/c/cd/Ed_Sheeran_-_Equals.png" alt="Album" class="pp">
+                    </div>
+                    <div class="col">
+                        <h2>Description</h2>
+                        <p>= is the fifth studio album by English singer-songwriter Ed Sheeran. Released on 29 October 2021 by Asylum and Atlantic Records, the album was supported by the singles "Bad Habits", "Shivers", "Overpass Graffiti", "The Joker and the Queen", "2step" and a promotional single, "Visiting Hours".</p>
+                        <p>Artist &nbsp;: Ed Sheeran</p>
+                        <p>Year &nbsp;: 2021</p>
+                        <p>City &nbsp;: UK</p>
+                    </div>
+                </div>
+                <hr>
+
                 <h2>Song list</h2>
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>Tides</li>
+                    <li>Shiver</li>
+                    <li>First Time</li>
+                    <li>Bad Habits</li>
+                    <li>Overpass Gravity</li>
+                    <li>The Joker And The Queen</li>
+                    <li>Leave Your Life</li>
+                    <li>Colldie</li>
+                    <li>2step</li>
+                    <li>Stop The Rain</li>
+                    <li>Visiting Hours</li>
+                    <li>Sandman</li>
+                    <li>Be Right Now</li>
                 </ul>
             </section>
+            <div class="text-center">
+                <button style="width: 50%;">Buy : Rp 200.000</button>
+            </div>
         </section>
-
     </main>
+
+    <footer>
+        <section class="song text-center">
+            <p>&copy Chocorange Music 2022</p>
+        </section>
+    </footer>
 </body>
 </html>
