--- a/html/profile.html
+++ b/html/profile.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="D:\safira_zettacamp_catfish\asset\css\style.css">
-    <title>Document</title>
+    <title>Task HTML Day 6</title>
 </head>
 <body>
     <header>
@@ -75,7 +75,9 @@
     </main>
 
     <footer>
-        <p>&copy Chocorange Music</p>
+        <section class="song text-center">
+            <p>&copy Chocorange Music 2022</p>
+        </section>
     </footer>
 </body>
 </html>
