--- a/html/song_listing.html
+++ b/html/song_listing.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="D:\safira_zettacamp_catfish\asset\css\style.css">
+    <title>Task HTML Day 6</title>
 </head>
 <body>
     <header>
@@ -19,7 +20,7 @@
     </header>
 
     <main>
-        <section>
+        <section class="text-center song">
             <h1>Song Content</h1>
             <table>
                 <tr>
@@ -30,48 +31,54 @@
                 </tr>
 
                 <tr>
-                    <td><img src="" alt=""></td>
+                    <td><img src="https://i.ytimg.com/an/AbZH7XWDW_k/5913355839072351887_mq.jpg?v=620a1b1a" alt=""></td>
                     <td><p><b>INVU</b></p></td>
                     <td><p>3.24</p></td>
                     <td><p>TAEYEON</p></td>
                 </tr>
 
                 <tr>
-                    <td><img src="" alt=""></td>
+                    <td><img src="https://upload.wikimedia.org/wikipedia/en/f/f2/BLACKPINK-_The_Album.png" alt=""></td>
                     <td><p><b>Love To Hate Me</b></p></td>
                     <td><p>2.49</p></td>
                     <td><p>BLACKPINK</p></td>
                 </tr>
 
                 <tr>
-                    <td><img src="" alt=""></td>
-                    <td><p><b></b></p></td>
-                    <td><p></p></td>
-                    <td><p></p></td>
+                    <td><img src="https://i.scdn.co/image/ab67616d0000b273d04b0657298bd6401896de5e" alt="" width="300px"></td>
+                    <td><p><b>2002</b></p></td>
+                    <td><p>03.06</p></td>
+                    <td><p>Anna Marie</p></td>
                 </tr>
 
                 <tr>
-                    <td><img src="" alt=""></td>
-                    <td><p><b></b></p></td>
-                    <td><p></p></td>
-                    <td><p></p></td>
+                    <td><img src="https://upload.wikimedia.org/wikipedia/en/5/5d/Jeon_Somi_What_You_Waiting_For_Single_Cover.jpg" widht="300px" alt=""></td>
+                    <td><p><b>What You Waiting For</b></p></td>
+                    <td><p>2.55</p></td>
+                    <td><p>Jeon Somi</p></td>
                 </tr>
 
                 <tr>
-                    <td><img src="" alt=""></td>
-                    <td><p><b></b></p></td>
-                    <td><p></p></td>
-                    <td><p></p></td>
+                    <td><img src="https://i.scdn.co/image/ab67616d0000b2734fcfc7c45bef0c20cc65ec27" width="300px" alt=""></td>
+                    <td><p><b>Pirate</b></p></td>
+                    <td><p>3.30</p></td>
+                    <td><p>Everglow</p></td>
                 </tr>
 
                 <tr>
-                    <td><img src="" alt=""></td>
-                    <td><p><b></b></p></td>
-                    <td><p></p></td>
-                    <td><p></p></td>
+                    <td><img src="https://upload.wikimedia.org/wikipedia/id/3/33/Twice_-_Eyes_Wide_Open.jpg" alt=""></td>
+                    <td><p><b>I Can't Stop Me</b></p></td>
+                    <td><p>3.25</p></td>
+                    <td><p>TWICE</p></td>
                 </tr>
             </table>
         </section>
     </main>
+
+    <footer>
+        <section class="song text-center">
+            <p>&copy Chocorange Music 2022</p>
+        </section>
+    </footer>
 </body>
 </html>
