--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body style="margin: 25px;">
     <header style="text-align: center;">
-        <h1>Superhero Profile</h1>
+        <h1>CSS Day 1 #1 - Superhero Profile</h1>
     </header>
 
     <main>
