--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
                 with her only son, Alexis Maxwell. Her famous is Johan Series, Omen Series, Dark Series,
                 and JanganDiklik Series.
             </p>
+            <p>
+                She active update her activity or her books progress in her social media such instragram 
+                and twitter with username @lexiexu47. She has her own website with her book publish information
+                and <i>Kumcer Supertragis</i> section for another story she made
+            </p>
         </section>
     </header>
 
