--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         alt="Omen Series" width="250px">
                     </div>
                     <div class="container">
-                        <h2>Omen Series</h2><hr>
+                        <h2 class="red">Omen Series</h2><hr>
                         <p>
                             Consists of 7 books including <i>Omen, Tujuh Luksisan Horor, Misteri Organisasi Rahasia</i> The
                             Judges, <i>Malam Karnaval Berdarah, Kutukan Hantu Opera, Sang Pengkhianat,</i> dan <i>Target Terakhir</i>
