--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <article class="card">
                     <img src="https://dlcdnwebimgs.asus.com/gain/d895a2b9-233a-4f11-91fd-b22788ac973f/" alt="Product">
                     <h2>Asus E210</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam blanditiis obcaecati numquam facere quisquam, labore delectus placeat nesciunt inventore? Neque quibusdam aut modi sapiente sunt, sequi laudantium quasi facere corporis?</p>
+                    <p>&nbsp;&nbsp;Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam blanditiis obcaecati numquam facere quisquam, labore delectus placeat nesciunt inventore? Neque quibusdam aut modi sapiente sunt, sequi laudantium quasi facere corporis?</p>
                     <div class="btn">
                         <a href="detail.html">Details</a>
                     </div>
@@ -28,7 +28,7 @@
                 <article class="card">
                     <img src="https://dlcdnwebimgs.asus.com/gain/d895a2b9-233a-4f11-91fd-b22788ac973f/" alt="Product">
                     <h2>Asus E210</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam blanditiis obcaecati numquam facere quisquam, labore delectus placeat nesciunt inventore? Neque quibusdam aut modi sapiente sunt, sequi laudantium quasi facere corporis?</p>
+                    <p>&nbsp;&nbsp;Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam blanditiis obcaecati numquam facere quisquam, labore delectus placeat nesciunt inventore? Neque quibusdam aut modi sapiente sunt, sequi laudantium quasi facere corporis?</p>
                     <div class="btn">
                         <a href="detail.html">Details</a>
                     </div>
@@ -37,7 +37,7 @@
                 <article class="card">
                     <img src="https://dlcdnwebimgs.asus.com/gain/d895a2b9-233a-4f11-91fd-b22788ac973f/" alt="Product">
                     <h2>Asus E210</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam blanditiis obcaecati numquam facere quisquam, labore delectus placeat nesciunt inventore? Neque quibusdam aut modi sapiente sunt, sequi laudantium quasi facere corporis?</p>
+                    <p>&nbsp;&nbsp;Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam blanditiis obcaecati numquam facere quisquam, labore delectus placeat nesciunt inventore? Neque quibusdam aut modi sapiente sunt, sequi laudantium quasi facere corporis?</p>
                     <div class="btn">
                         <a href="detail.html">Details</a>
                     </div>
@@ -49,7 +49,7 @@
                 <article class="card">
                     <img src="https://dlcdnwebimgs.asus.com/gain/d895a2b9-233a-4f11-91fd-b22788ac973f/" alt="Product">
                     <h2>Asus E210</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum commodi molestiae ipsam dolore eaque ex dolorum repellendus sint perferendis. Enim placeat autem dignissimos aut vero eveniet itaque! Pariatur, necessitatibus soluta.</p>
+                    <p>&nbsp;&nbsp;Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum commodi molestiae ipsam dolore eaque ex dolorum repellendus sint perferendis. Enim placeat autem dignissimos aut vero eveniet itaque! Pariatur, necessitatibus soluta.</p>
                     <div class="btn">
                         <a href="detail.html">Details</a>
                     </div>
@@ -58,7 +58,7 @@
                 <article class="card">
                     <img src="https://dlcdnwebimgs.asus.com/gain/d895a2b9-233a-4f11-91fd-b22788ac973f/" alt="Product">
                     <h2>Asus E210</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum commodi molestiae ipsam dolore eaque ex dolorum repellendus sint perferendis. Enim placeat autem dignissimos aut vero eveniet itaque! Pariatur, necessitatibus soluta.</p>
+                    <p>&nbsp;&nbsp;Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum commodi molestiae ipsam dolore eaque ex dolorum repellendus sint perferendis. Enim placeat autem dignissimos aut vero eveniet itaque! Pariatur, necessitatibus soluta.</p>
                     <div class="btn">
                         <a href="detail.html">Details</a>
                     </div>
@@ -67,7 +67,7 @@
                 <article class="card">
                     <img src="https://dlcdnwebimgs.asus.com/gain/d895a2b9-233a-4f11-91fd-b22788ac973f/" alt="Product">
                     <h2>Asus E210</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum commodi molestiae ipsam dolore eaque ex dolorum repellendus sint perferendis. Enim placeat autem dignissimos aut vero eveniet itaque! Pariatur, necessitatibus soluta.</p>
+                    <p>&nbsp;&nbsp;Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum commodi molestiae ipsam dolore eaque ex dolorum repellendus sint perferendis. Enim placeat autem dignissimos aut vero eveniet itaque! Pariatur, necessitatibus soluta.</p>
                     <div class="btn">
                         <a href="detail.html">Details</a>
                     </div>
@@ -79,7 +79,7 @@
                 <article class="card">
                     <img src="https://dlcdnwebimgs.asus.com/gain/d895a2b9-233a-4f11-91fd-b22788ac973f/" alt="Product">
                     <h2>Asus E210</h2>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque sunt eos error molestiae nihil quam harum, nobis ipsam praesentium, provident corporis iste distinctio! Commodi iure quisquam perspiciatis facilis deserunt provident.</p>
+                    <p>&nbsp;&nbsp;Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque sunt eos error molestiae nihil quam harum, nobis ipsam praesentium, provident corporis iste distinctio! Commodi iure quisquam perspiciatis facilis deserunt provident.</p>
                     <div class="btn">
                         <a href="detail.html">Details</a>
                     </div>
@@ -88,7 +88,7 @@
                 <article class="card">
                     <img src="https://dlcdnwebimgs.asus.com/gain/d895a2b9-233a-4f11-91fd-b22788ac973f/" alt="Product">
                     <h2>Asus E210</h2>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque sunt eos error molestiae nihil quam harum, nobis ipsam praesentium, provident corporis iste distinctio! Commodi iure quisquam perspiciatis facilis deserunt provident.</p>
+                    <p>&nbsp;&nbsp;Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque sunt eos error molestiae nihil quam harum, nobis ipsam praesentium, provident corporis iste distinctio! Commodi iure quisquam perspiciatis facilis deserunt provident.</p>
                     <div class="btn">
                         <a href="detail.html">Details</a>
                     </div>
@@ -97,7 +97,7 @@
                 <article class="card">
                     <img src="https://dlcdnwebimgs.asus.com/gain/d895a2b9-233a-4f11-91fd-b22788ac973f/" alt="Product">
                     <h2>Asus E210</h2>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque sunt eos error molestiae nihil quam harum, nobis ipsam praesentium, provident corporis iste distinctio! Commodi iure quisquam perspiciatis facilis deserunt provident.</p>
+                    <p>&nbsp;&nbsp;Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque sunt eos error molestiae nihil quam harum, nobis ipsam praesentium, provident corporis iste distinctio! Commodi iure quisquam perspiciatis facilis deserunt provident.</p>
                     <div class="btn">
                         <a href="detail.html">Details</a>
                     </div>
